--- a/teste.html
+++ b/teste.html
@@ -6,6 +6,112 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table>
+        <caption>População dos Estados Brasileiros - 2024</caption>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+                <th>Comando HTML Utilizado</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Acre</td>
+                <td>830.018</td>
+                <td>'Negrito' e Destacado</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td>3.365.351</td>
+                <td>'Itálico'</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td>877.613</td>
+                <td>'Texto Sublinhado'</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td>4.269.995</td>
+                <td>'Texto riscado' e 'Texto Sublinhado'</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td>14.141.626</td>
+                <td>Testo sobrescrito</td>
+            </tr>
+            <tr>
+                <td>CE</td>
+                <td>9.240.580</td>
+                <td>'Abreviação'</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td>3.098.883</td>
+                <td>''Testo em negrito</td>
+            </tr>
+            <tr>
+                <td>"Espirito Santo"</td>
+                <td>4.108.508</td>
+                <td>"Citação curta"</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td>7.206.589</td>
+                <td>'Citação de fonte'</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td>6.775.805</td>
+                <td>'Texto nonoespaçado'</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td>3.658.813</td>
+                <td>Texto pré-formatado</td>
+            </tr>
+            <tr>
+                <td>Paraiba</td>
+                <td>4.059.905</td>
+                <td>'Texto pequeno'</td>
+            </tr>
+            <tr>
+                <td>Piaui</td>
+                <td>3.281.480</td>
+                <td>'Texto subscrito'</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td>16.054.524</td>
+                <td>Citação em Bloco</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td>10.882.965</td>
+                <td>'Negrito'</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td>1.616.379</td>
+                <td>'Itálico'</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td>636.707</td>
+                <td>'Texto Destacado'</td>
+            </tr>
+            <tr>
+                <td>TO</td>
+                <td>1.607.363.</td>
+                <td>'Abreviação'</td>
+            </tr>
+            <tfoot>
+                <td>Total da população estimada:</td>
+                <td>Soma Total</td>
+                <td>Realizar a soma das colunas</td>
+            </tfoot>
+        </tbody>
+    </table>
 </body>
 </html>
