--- a/teste.html
+++ b/teste.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Aula-04-Cap-21-Aula-04-Tabela-Grandes/css/style.css";
     <title>Document</title>
 </head>
 <body>
+    <div class=""
     <table>
         <caption>População dos Estados Brasileiros - 2024</caption>
         <thead>
@@ -19,27 +21,27 @@
             <tr>
                 <td>Acre</td>
                 <td>830.018</td>
-                <td>'Negrito' e Destacado</td>
+                <td>'<strong>Negrito</strong>' e <mark>Destacado</mark></td>
             </tr>
             <tr>
                 <td>Alagoas</td>
                 <td>3.365.351</td>
-                <td>'Itálico'</td>
+                <td>'<i>Itálico</i>'</td>
             </tr>
             <tr>
                 <td>Amapá</td>
                 <td>877.613</td>
-                <td>'Texto Sublinhado'</td>
+                <td>'<u>Texto Sublinhado</u>'</td>
             </tr>
             <tr>
-                <td>Amazonas</td>
-                <td>4.269.995</td>
-                <td>'Texto riscado' e 'Texto Sublinhado'</td>
+                <td><s>Amazonas</s></td>
+                <td><u>4.269.995</u></td>
+                <td>'<s>Texto riscado</s>' e '<u>Texto Sublinhado</u>'</td>
             </tr>
             <tr>
                 <td>Bahia</td>
                 <td>14.141.626</td>
-                <td>Testo sobrescrito</td>
+                <td><sup>Testo sobrescrito</sup></td>
             </tr>
             <tr>
                 <td>CE</td>
@@ -47,9 +49,9 @@
                 <td>'Abreviação'</td>
             </tr>
             <tr>
-                <td>Distrito Federal</td>
+                <td><strong>Distrito Federal</strong></td>
                 <td>3.098.883</td>
-                <td>''Testo em negrito</td>
+                <td><strong>'Testo em negrito'</strong></td>
             </tr>
             <tr>
                 <td>"Espirito Santo"</td>
@@ -67,7 +69,7 @@
                 <td>'Texto nonoespaçado'</td>
             </tr>
             <tr>
-                <td>Mato Grosso</td>
+                <td class="espaco">Mato Grosso</td>
                 <td>3.658.813</td>
                 <td>Texto pré-formatado</td>
             </tr>
@@ -82,7 +84,7 @@
                 <td>'Texto subscrito'</td>
             </tr>
             <tr>
-                <td>Rio de Janeiro</td>
+                <td class="espaco">Rio de Janeiro</td>
                 <td>16.054.524</td>
                 <td>Citação em Bloco</td>
             </tr>
